--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
-    <!--Шапка-->
-    <header class="header">
-      <nav class="nav">
+    <!--Шапка-->    
+    <header class="header"><div class="container main-head">
+      <nav class="nav main-head">
         <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
         <ul class="nav-list list">
           <li class="nav-item"><a class="nav-link current link" href="./index.html">Студія</a></li>
@@ -33,18 +33,18 @@
         <li class="contact-list-item"
           ><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li
         >
-      </ul>
+      </ul></div>
     </header>
     <!--Основна інформація-->
     <main>
       <!--Hero section-->
-      <section class="hero-section">
+      <section class="hero-section"><div class="container">
         <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="button primary" type="button">Замовити послугу</button>
+        <button class="button primary" type="button">Замовити послугу</button></div>
       </section>
-      <section class="benefits">
+      <section class="benefits section"><div class="container">
         <!--Our benefits-->
-        <h2 hidden class="section-title">Наші особливості</h2>
+        <h2  class="section-title visually-hidden">Наші особливості</h2>
         <ul class="benefits-list list">
           <li class="benefits-list-item">
             <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -70,10 +70,10 @@
               >Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p
             >
           </li>
-        </ul>
+        </ul></div>
       </section>
       <!-- Чим ми займаємося -->
-      <section class="work-section">
+      <section class="work-section section"><div class="container">
         <h2 class="work-title">Чим ми займаємося</h2>
         <ul class="work-list list">
           <li class="list-item"
@@ -100,10 +100,10 @@
               width="370"
               height="294"
           /></li>
-        </ul>
+        </ul></div>
       </section>
       <!-- Наша комманда -->
-      <section class="team-section">
+      <section class="team-section section"><div class="container">
         <h2 class="team-title">Наша команда</h2>
         <ul class="team-list list">
           <li class="list-item"
@@ -146,11 +146,11 @@
             /><h3 class="team-name">Михайло Єрмаков</h3
             ><p class="team-desc" lang="en">UI Designer</p></li
           >
-        </ul>
+        </ul></div>
       </section>
     </main>
     <!--Підвал-->
-    <footer>
+    <footer><div class="container logo-bottom">
       <a class="logo link" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
       <address class="contact-adress" id="contacts">
         <ul class="contact-adress-list list"
@@ -172,7 +172,7 @@
             ><a class="contact-adress-link link" href="tel:+380961111111">+38 096 111 11 11</a></li
           >
         </ul>
-      </address>
+      </address></div>
     </footer>
   </body>
 </html>
