--- a/index.html
+++ b/index.html
@@ -16,163 +16,190 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
-    <!--Шапка-->    
-    <header class="header"><div class="container main-head">
-      <nav class="nav main-head">
-        <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
-        <ul class="nav-list list">
-          <li class="nav-item"><a class="nav-link current link" href="./index.html">Студія</a></li>
-          <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфоліо</a></li>
-          <li class="nav-item"><a class="nav-link link" href="#contacts">Контакти</a></li>
-        </ul>
-      </nav>
-      <ul class="contact-list list ">
-        <li class="contact-list-item"
-          ><a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a></li
-        >
-        <li class="contact-list-item"
-          ><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li
-        >
-      </ul></div>
+    <!--Шапка-->
+    <header class="header"
+      ><div class="container main-head">
+        <nav class="nav main-head">
+          <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
+          <ul class="nav-list list">
+            <li class="nav-item"
+              ><a class="nav-link current link" href="./index.html">Студія</a></li
+            >
+            <li class="nav-item"><a class="nav-link link" href="./portfolio.html">Портфоліо</a></li>
+            <li class="nav-item"><a class="nav-link link" href="#contacts">Контакти</a></li>
+          </ul>
+        </nav>
+        <ul class="contact-list list">
+          <li class="contact-list-item"
+            ><a class="contact-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            ></li
+          >
+          <li class="contact-list-item"
+            ><a class="contact-link link" href="tel:+380961111111">+38 096 111 11 11</a></li
+          >
+        </ul></div
+      >
     </header>
     <!--Основна інформація-->
     <main>
       <!--Hero section-->
-      <section class="hero-section"><div class="container">
-        <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-        <button class="button primary" type="button">Замовити послугу</button></div>
+      <section class="hero-section"
+        ><div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="button primary" type="button">Замовити послугу</button></div
+        >
       </section>
-      <section class="benefits section"><div class="container">
-        <!--Our benefits-->
-        <h2  class="section-title visually-hidden">Наші особливості</h2>
-        <ul class="benefits-list list">
-          <li class="benefits-list-item">
-            <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p class="benefits-desc"
-              >Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p
-            >
-          </li>
-          <li class="benefits-list-item"
-            ><h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p class="benefits-desc"
-              >Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p
-            >
-          </li>
-          <li class="benefits-list-item">
-            <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
-            <p class="benefits-desc"
-              >Так само консультація з широким активом значною мірою зумовлює.</p
-            >
-          </li>
-          <li class="benefits-list-item"
-            ><h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p class="benefits-desc"
-              >Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p
-            >
-          </li>
-        </ul></div>
+      <section class="benefits section"
+        ><div class="container">
+          <!--Our benefits-->
+          <h2 class="section-title visually-hidden">Наші особливості</h2>
+          <ul class="benefits-list list">
+            <li class="benefits-list-item">
+              <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="benefits-desc"
+                >Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p
+              >
+            </li>
+            <li class="benefits-list-item"
+              ><h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="benefits-desc"
+                >Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p
+              >
+            </li>
+            <li class="benefits-list-item">
+              <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
+              <p class="benefits-desc"
+                >Так само консультація з широким активом значною мірою зумовлює.</p
+              >
+            </li>
+            <li class="benefits-list-item"
+              ><h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="benefits-desc"
+                >Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p
+              >
+            </li>
+          </ul></div
+        >
       </section>
       <!-- Чим ми займаємося -->
-      <section class="work-section section"><div class="container">
-        <h2 class="work-title">Чим ми займаємося</h2>
-        <ul class="work-list list">
-          <li class="list-item"
-            ><img
-              class="work-img"
-              src="./images/img1.jpg"
-              alt="Программують за допомогю планшета та компьютера"
-              width="370"
-              height="294"
-          /></li>
-          <li class="list-item"
-            ><img
-              class="work-img"
-              src="./images/img2.jpg"
-              alt="Ноутбук з мобильною версією сайту, у руках телефон"
-              width="370"
-              height="294"
-          /></li>
-          <li class="list-item"
-            ><img
-              class="work-img"
-              src="./images/img3.jpg"
-              alt="Планшет у руках, на якому кольорова палітра"
-              width="370"
-              height="294"
-          /></li>
-        </ul></div>
+      <section class="work-section section"
+        ><div class="container">
+          <h2 class="work-title">Чим ми займаємося</h2>
+          <ul class="work-list list">
+            <li class="list-item"
+              ><img
+                class="work-img"
+                src="./images/img1.jpg"
+                alt="Программують за допомогю планшета та компьютера"
+                width="370"
+                height="294"
+            /></li>
+            <li class="list-item"
+              ><img
+                class="work-img"
+                src="./images/img2.jpg"
+                alt="Ноутбук з мобильною версією сайту, у руках телефон"
+                width="370"
+                height="294"
+            /></li>
+            <li class="list-item"
+              ><img
+                class="work-img"
+                src="./images/img3.jpg"
+                alt="Планшет у руках, на якому кольорова палітра"
+                width="370"
+                height="294"
+            /></li> </ul
+        ></div>
       </section>
       <!-- Наша комманда -->
-      <section class="team-section section"><div class="container">
-        <h2 class="team-title">Наша команда</h2>
-        <ul class="team-list list">
-          <li class="list-item"
-            ><img
-              class="team-img"
-              src="./images/images-kommanda/img1.jpg"
-              alt="Ігор Дем'яненко"
-              width="270"
-              height="260"
-            /><h3 class="team-name">Ігор Дем'яненко</h3
-            ><p class="team-desc" lang="en">Product Designer</p></li
-          >
-          <li class="list-item"
-            ><img
-              class="team-img"
-              src="./images/images-kommanda/img2.jpg"
-              alt="Ольга Рєпіна"
-              width="270"
-              height="260"
-            /><h3 class="team-name">Ольга Рєпіна</h3
-            ><p class="team-desc" lang="en">Frontend Developer</p></li
-          >
-          <li class="list-item"
-            ><img
-              class="team-img"
-              src="./images/images-kommanda/img3.jpg"
-              alt="Микола Тарасов"
-              width="270"
-              height="260"
-            /><h3 class="team-name">Микола Тарасов</h3
-            ><p class="team-desc" lang="en">Marketing</p></li
-          >
-          <li class="list-item"
-            ><img
-              class="team-img"
-              src="./images/images-kommanda/img4.jpg"
-              alt="Михайло Єрмаков"
-              width="270"
-              height="260"
-            /><h3 class="team-name">Михайло Єрмаков</h3
-            ><p class="team-desc" lang="en">UI Designer</p></li
-          >
-        </ul></div>
+      <section class="team-section section"
+        ><div class="container">
+          <h2 class="team-title">Наша команда</h2>
+          <ul class="team-list list">
+            <li class="list-item team-item"
+              ><img
+                class="team-img"
+                src="./images/images-kommanda/img1.jpg"
+                alt="Ігор Дем'яненко"
+                width="270"
+                height="260"
+              /><div class="team-box"
+                ><h3 class="team-name">Ігор Дем'яненко</h3
+                ><p class="team-desc" lang="en">Product Designer</p></div
+              ></li
+            >
+            <li class="list-item team-item"
+              ><img
+                class="team-img"
+                src="./images/images-kommanda/img2.jpg"
+                alt="Ольга Рєпіна"
+                width="270"
+                height="260"
+              /><div class="team-box"
+                ><h3 class="team-name">Ольга Рєпіна</h3
+                ><p class="team-desc" lang="en">Frontend Developer</p></div
+              ></li
+            >
+            <li class="list-item team-item"
+              ><img
+                class="team-img"
+                src="./images/images-kommanda/img3.jpg"
+                alt="Микола Тарасов"
+                width="270"
+                height="260"
+              /><div class="team-box"
+                ><h3 class="team-name">Микола Тарасов</h3
+                ><p class="team-desc" lang="en">Marketing</p></div
+              ></li
+            >
+            <li class="list-item team-item"
+              ><img
+                class="team-img"
+                src="./images/images-kommanda/img4.jpg"
+                alt="Михайло Єрмаков"
+                width="270"
+                height="260"
+              /><div class="team-box"
+                ><h3 class="team-name">Михайло Єрмаков</h3
+                ><p class="team-desc" lang="en">UI Designer</p></div
+              ></li
+            >
+          </ul></div
+        >
       </section>
     </main>
     <!--Підвал-->
-    <footer><div class="container logo-bottom">
-      <a class="logo link" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
-      <address class="contact-adress" id="contacts">
-        <ul class="contact-adress-list list"
-          ><li class="adress-item">
-            <a
-              class="adress-link link"
-              href="https://goo.gl/maps/P9MRE7Qx5uQHdHFFA"
-              target="_blank"
-              rel="noopener noreferrer"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            ></li
-          >
-          <li class="contact-adress-item"
-            ><a class="contact-adress-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            ></li
-          >
-          <li class="contact-adress-item"
-            ><a class="contact-adress-link link" href="tel:+380961111111">+38 096 111 11 11</a></li
-          >
-        </ul>
-      </address></div>
+    <footer
+      ><div class="container">
+        <a class="logo logo-bottom link" href="./index.html"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <address class="contact-adress" id="contacts">
+          <ul class="contact-adress-list list"
+            ><li class="adress-item">
+              <a
+                class="adress-link link"
+                href="https://goo.gl/maps/P9MRE7Qx5uQHdHFFA"
+                target="_blank"
+                rel="noopener noreferrer"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              ></li
+            >
+            <li class="contact-adress-item"
+              ><a class="contact-adress-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              ></li
+            >
+            <li class="contact-adress-item"
+              ><a class="contact-adress-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              ></li
+            >
+          </ul>
+        </address></div
+      >
     </footer>
   </body>
 </html>
