--- a/portfolio.html
+++ b/portfolio.html
@@ -17,15 +17,15 @@
   </head>
   <body>
     <!--Шапка-->
-    <header class="header" 
+    <header class="header"
       ><div class="container main-head">
         <nav class="nav main-head">
           <a class="logo link" href="./index.html">Web<span class="logo-color">Studio</span></a>
           <ul class="nav-list list">
+            <li class="nav-item"><a class="nav-link link" href="./index.html">Студія</a></li>
             <li class="nav-item"
-              ><a class="nav-link link" href="./index.html">Студія</a></li
+              ><a class="nav-link current link" href="./portfolio.html">Портфоліо</a></li
             >
-            <li class="nav-item"><a class="nav-link current link" href="./portfolio.html">Портфоліо</a></li>
             <li class="nav-item"><a class="nav-link link" href="#contacts">Контакти</a></li>
           </ul>
         </nav>
@@ -42,168 +42,195 @@
       >
     </header>
     <main>
-      <!--Filter list-->
-      <div class="container section">
-        <section class="filter-section">
-          <h2 class="visually-hidden">Список фильтрів</h2>
-          <ul class="filter-list list">
-            <li class="filter-list-item"
-              ><button class="button secondary first-btn" type="button">Усі</button></li
+      <section class="section">
+        <!--Filter list-->
+        <div class="container">
+          <section class="filter-section">
+            <h2 class="visually-hidden">Список фильтрів</h2>
+            <ul class="filter-list list">
+              <li class="filter-list-item"
+                ><button class="button secondary first-btn" type="button">Усі</button></li
+              >
+              <li class="filter-list-item"
+                ><button class="button secondary" type="button">Веб-сайти</button></li
+              >
+              <li class="filter-list-item"
+                ><button class="button secondary" type="button">Додатки</button></li
+              >
+              <li class="filter-list-item"
+                ><button class="button secondary" type="button">Дизайн</button></li
+              >
+              <li class="filter-list-item"
+                ><button class="button secondary" type="button">Маркетинг</button></li
+              >
+            </ul>
+          </section>
+          <!-- Portfolio -->
+          <section class="portfolio-section">
+            <h2 hidden>Портфоліо</h2>
+            <ul class="potfolio-list list">
+              <li class="potfolio-list-item">
+                <a class="portfolio-link link" href=""
+                  ><img
+                    class="portfolio-img"
+                    src="./images/images-portfolio/img2.1.jpg"
+                    alt="Сторінка сайту на ноутбуці"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="underimg">
+                    <h3 class="potfolio-title">Технокряк</h3>
+                    <p class="potfolio-desc">Веб-сайт</p></div
+                  >
+                </a></li
+              ><li class="potfolio-list-item">
+                <a class="portfolio-link link" href=""
+                  ><img
+                    class="portfolio-img"
+                    src="./images/images-portfolio/imgimg2.2.jpg"
+                    alt="Два гравця тягнуться до м'яча"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="underimg">
+                    <h3 class="potfolio-title">Постер New Orlean vs Golden Star</h3>
+                    <p class="potfolio-desc">Дизайн</p></div
+                  >
+                </a></li
+              ><li class="potfolio-list-item"
+                ><a class="portfolio-link link" href=""
+                  ><img
+                    class="portfolio-img"
+                    src="./images/images-portfolio/imgimg2.3.jpg"
+                    alt="Логотип ресторану"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="underimg">
+                    <h3 class="potfolio-title">Ресторан Seafood</h3>
+                    <p class="potfolio-desc">Додаток</p></div
+                  >
+                </a></li
+              ><li class="potfolio-list-item">
+                <a class="portfolio-link link" href=""
+                  ><img
+                    class="portfolio-img"
+                    src="./images/images-portfolio/imgimg2.4.jpg"
+                    alt="Навушники"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="underimg">
+                    <h3 class="potfolio-title">Проєкт Prime</h3>
+                    <p class="potfolio-desc">Маркетинг</p></div
+                  >
+                </a></li
+              ><li class="potfolio-list-item"
+                ><a class="portfolio-link link" href=""
+                  ><img
+                    class="portfolio-img"
+                    src="./images/images-portfolio/imgimg2.5.jpg"
+                    alt="Дві коробки"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="underimg">
+                    <h3 class="potfolio-title">Проєкт Boxes</h3>
+                    <p class="potfolio-desc">Додаток</p></div
+                  >
+                </a></li
+              ><li class="potfolio-list-item"
+                ><a class="portfolio-link link" href=""
+                  ><img
+                    class="portfolio-img"
+                    src="./images/images-portfolio/imgimg2.6.jpg"
+                    alt="Монітор компьютера"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="underimg">
+                    <h3 class="potfolio-title">Inspiration has no Borders</h3>
+                    <p class="potfolio-desc">Веб-сайт</p></div
+                  >
+                </a></li
+              ><li class="potfolio-list-item"
+                ><a class="portfolio-link link" href=""
+                  ><img
+                    class="portfolio-img"
+                    src="./images/images-portfolio/imgimg2.7.jpg"
+                    alt="Відкрита книга"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="underimg">
+                    <h3 class="potfolio-title">Видання Limited Edition</h3>
+                    <p class="potfolio-desc">Дизайн</p></div
+                  >
+                </a></li
+              ><li class="potfolio-list-item"
+                ><a class="portfolio-link link" href=""
+                  ><img
+                    class="portfolio-img"
+                    src="./images/images-portfolio/imgimg2.8.jpg"
+                    alt="Ярлик на мотузці з логотипом"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="underimg">
+                    <h3 class="potfolio-title">Проєкт LAB</h3>
+                    <p class="potfolio-desc">Маркетинг</p></div
+                  >
+                </a></li
+              ><li class="potfolio-list-item"
+                ><a class="portfolio-link link" href=""
+                  ><img
+                    class="portfolio-img"
+                    src="./images/images-portfolio/imgimg2.9.jpg"
+                    alt="Ноутбук на робочому столі"
+                    width="370"
+                    height="294"
+                  />
+                  <div class="underimg">
+                    <h3 class="potfolio-title">Growing Business</h3>
+                    <p class="potfolio-desc">Додаток</p></div
+                  >
+                </a></li
+              ></ul
             >
-            <li class="filter-list-item"
-              ><button class="button secondary" type="button">Веб-сайти</button></li
-            >
-            <li class="filter-list-item"
-              ><button class="button secondary" type="button">Додатки</button></li
-            >
-            <li class="filter-list-item"
-              ><button class="button secondary" type="button">Дизайн</button></li
-            >
-            <li class="filter-list-item"
-              ><button class="button secondary" type="button">Маркетинг</button></li
-            >
-          </ul>
-        </section>
-        <!-- Portfolio -->
-        <section class="portfolio-section">
-          <h2 hidden>Портфоліо</h2>
-          <ul class="potfolio-list list">
-            <li class="potfolio-list-item">
-              <a class="portfolio-link link" href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/images-portfolio/img2.1.jpg"
-                  alt="Сторінка сайту на ноутбуці"
-                  width="370"
-                  height="294" />
-                  <div class="underimg">
-                <h3 class="potfolio-title">Технокряк</h3>
-                <p class="potfolio-desc">Веб-сайт</p></div>
-                <p></p></a></li
-            ><li class="potfolio-list-item">
-              <a class="portfolio-link link" href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/images-portfolio/imgimg2.2.jpg"
-                  alt="Два гравця тягнуться до м'яча"
-                  width="370"
-                  height="294" />
-                  <div class="underimg">
-                <h3 class="potfolio-title">Постер New Orlean vs Golden Star</h3>
-                <p class="potfolio-desc">Дизайн</p></div>
-                <p></p></a></li
-            ><li class="potfolio-list-item"
-              ><a class="portfolio-link link" href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/images-portfolio/imgimg2.3.jpg"
-                  alt="Логотип ресторану"
-                  width="370"
-                  height="294" />
-                  <div class="underimg">
-                <h3 class="potfolio-title">Ресторан Seafood</h3>
-                <p class="potfolio-desc">Додаток</p></div>
-                <p></p></a></li
-            ><li class="potfolio-list-item">
-              <a class="portfolio-link link" href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/images-portfolio/imgimg2.4.jpg"
-                  alt="Навушники"
-                  width="370"
-                  height="294" />
-                  <div class="underimg">
-                <h3 class="potfolio-title">Проєкт Prime</h3>
-                <p class="potfolio-desc">Маркетинг</p></div>
-                <p></p></a></li
-            ><li class="potfolio-list-item"
-              ><a class="portfolio-link link" href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/images-portfolio/imgimg2.5.jpg"
-                  alt="Дві коробки"
-                  width="370"
-                  height="294" />
-                  <div class="underimg">
-                <h3 class="potfolio-title">Проєкт Boxes</h3>
-                <p class="potfolio-desc">Додаток</p></div>
-                <p></p></a></li
-            ><li class="potfolio-list-item"
-              ><a class="portfolio-link link" href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/images-portfolio/imgimg2.6.jpg"
-                  alt="Монітор компьютера"
-                  width="370"
-                  height="294" />
-                  <div class="underimg">
-                <h3 class="potfolio-title">Inspiration has no Borders</h3>
-                <p class="potfolio-desc">Веб-сайт</p></div>
-                <p></p></a></li
-            ><li class="potfolio-list-item"
-              ><a class="portfolio-link link" href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/images-portfolio/imgimg2.7.jpg"
-                  alt="Відкрита книга"
-                  width="370"
-                  height="294" />
-                  <div class="underimg">
-                <h3 class="potfolio-title">Видання Limited Edition</h3>
-                <p class="potfolio-desc">Дизайн</p></div>
-                <p></p></a></li
-            ><li class="potfolio-list-item"
-              ><a class="portfolio-link link" href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/images-portfolio/imgimg2.8.jpg"
-                  alt="Ярлик на мотузці з логотипом"
-                  width="370"
-                  height="294" />
-                  <div class="underimg">
-                <h3 class="potfolio-title">Проєкт LAB</h3>
-                <p class="potfolio-desc">Маркетинг</p></div>
-                <p></p></a></li
-            ><li class="potfolio-list-item"
-              ><a class="portfolio-link link" href=""
-                ><img
-                  class="portfolio-img"
-                  src="./images/images-portfolio/imgimg2.9.jpg"
-                  alt="Ноутбук на робочому столі"
-                  width="370"
-                  height="294"
-                />
-                <div class="underimg">
-                <h3 class="potfolio-title">Growing Business</h3>
-                <p class="potfolio-desc">Додаток</p></div>
-                <p></p> </a></li
-          ></ul> </section
-      ></div>
+          </section></div
+        ></section
+      >
     </main>
     <!--Підвал-->
-    <footer><div class="container logo-bottom">
-      <a class="logo link" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
-      <address class="contact-adress" id="contacts">
-        <ul class="contact-adress-list list"
-          ><li class="adress-item">
-            <a
-              class="adress-link link"
-              href="https://goo.gl/maps/P9MRE7Qx5uQHdHFFA"
-              target="_blank"
-              rel="noopener noreferrer"
-              >м. Київ, пр-т Лесі Українки, 26</a
-            ></li
-          >
-          <li class="contact-adress-item"
-            ><a class="contact-adress-link link" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            ></li
-          >
-          <li class="contact-adress-item"
-            ><a class="contact-adress-link link" href="tel:+380961111111">+38 096 111 11 11</a></li
-          >
-        </ul>
-      </address></div>
+    <footer
+      ><div class="container">
+        <a class="logo logo-bottom link" href="./index.html"
+          >Web<span class="footer-logo-color">Studio</span></a
+        >
+        <address class="contact-adress" id="contacts">
+          <ul class="contact-adress-list list"
+            ><li class="adress-item">
+              <a
+                class="adress-link link"
+                href="https://goo.gl/maps/P9MRE7Qx5uQHdHFFA"
+                target="_blank"
+                rel="noopener noreferrer"
+                >м. Київ, пр-т Лесі Українки, 26</a
+              ></li
+            >
+            <li class="contact-adress-item"
+              ><a class="contact-adress-link link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              ></li
+            >
+            <li class="contact-adress-item"
+              ><a class="contact-adress-link link" href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              ></li
+            >
+          </ul>
+        </address></div
+      >
     </footer>
   </body>
 </html>
