--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
     <!--Підвал-->
     <footer
       ><div class="container">
-        <a class="logo logo-bottom link" href="./index.html"
+        <a class="logo-bottom link" href="./index.html"
           >Web<span class="footer-logo-color">Studio</span></a
         >
         <address class="contact-adress" id="contacts">
