--- a/portfolio.html
+++ b/portfolio.html
@@ -45,166 +45,161 @@
       <section class="section">
         <!--Filter list-->
         <div class="container">
-          <section class="filter-section">
-            <h2 class="visually-hidden">Список фильтрів</h2>
-            <ul class="filter-list list">
-              <li class="filter-list-item"
-                ><button class="button secondary first-btn" type="button">Усі</button></li
-              >
-              <li class="filter-list-item"
-                ><button class="button secondary" type="button">Веб-сайти</button></li
-              >
-              <li class="filter-list-item"
-                ><button class="button secondary" type="button">Додатки</button></li
-              >
-              <li class="filter-list-item"
-                ><button class="button secondary" type="button">Дизайн</button></li
-              >
-              <li class="filter-list-item"
-                ><button class="button secondary" type="button">Маркетинг</button></li
-              >
-            </ul>
-          </section>
-          <!-- Portfolio -->
-          <section class="portfolio-section">
-            <h2 hidden>Портфоліо</h2>
-            <ul class="potfolio-list list">
-              <li class="potfolio-list-item">
-                <a class="portfolio-link link" href=""
-                  ><img
-                    class="portfolio-img"
-                    src="./images/images-portfolio/img2.1.jpg"
-                    alt="Сторінка сайту на ноутбуці"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="underimg">
-                    <h3 class="potfolio-title">Технокряк</h3>
-                    <p class="potfolio-desc">Веб-сайт</p></div
-                  >
-                </a></li
-              ><li class="potfolio-list-item">
-                <a class="portfolio-link link" href=""
-                  ><img
-                    class="portfolio-img"
-                    src="./images/images-portfolio/imgimg2.2.jpg"
-                    alt="Два гравця тягнуться до м'яча"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="underimg">
-                    <h3 class="potfolio-title">Постер New Orlean vs Golden Star</h3>
-                    <p class="potfolio-desc">Дизайн</p></div
-                  >
-                </a></li
-              ><li class="potfolio-list-item"
-                ><a class="portfolio-link link" href=""
-                  ><img
-                    class="portfolio-img"
-                    src="./images/images-portfolio/imgimg2.3.jpg"
-                    alt="Логотип ресторану"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="underimg">
-                    <h3 class="potfolio-title">Ресторан Seafood</h3>
-                    <p class="potfolio-desc">Додаток</p></div
-                  >
-                </a></li
-              ><li class="potfolio-list-item">
-                <a class="portfolio-link link" href=""
-                  ><img
-                    class="portfolio-img"
-                    src="./images/images-portfolio/imgimg2.4.jpg"
-                    alt="Навушники"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="underimg">
-                    <h3 class="potfolio-title">Проєкт Prime</h3>
-                    <p class="potfolio-desc">Маркетинг</p></div
-                  >
-                </a></li
-              ><li class="potfolio-list-item"
-                ><a class="portfolio-link link" href=""
-                  ><img
-                    class="portfolio-img"
-                    src="./images/images-portfolio/imgimg2.5.jpg"
-                    alt="Дві коробки"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="underimg">
-                    <h3 class="potfolio-title">Проєкт Boxes</h3>
-                    <p class="potfolio-desc">Додаток</p></div
-                  >
-                </a></li
-              ><li class="potfolio-list-item"
-                ><a class="portfolio-link link" href=""
-                  ><img
-                    class="portfolio-img"
-                    src="./images/images-portfolio/imgimg2.6.jpg"
-                    alt="Монітор компьютера"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="underimg">
-                    <h3 class="potfolio-title">Inspiration has no Borders</h3>
-                    <p class="potfolio-desc">Веб-сайт</p></div
-                  >
-                </a></li
-              ><li class="potfolio-list-item"
-                ><a class="portfolio-link link" href=""
-                  ><img
-                    class="portfolio-img"
-                    src="./images/images-portfolio/imgimg2.7.jpg"
-                    alt="Відкрита книга"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="underimg">
-                    <h3 class="potfolio-title">Видання Limited Edition</h3>
-                    <p class="potfolio-desc">Дизайн</p></div
-                  >
-                </a></li
-              ><li class="potfolio-list-item"
-                ><a class="portfolio-link link" href=""
-                  ><img
-                    class="portfolio-img"
-                    src="./images/images-portfolio/imgimg2.8.jpg"
-                    alt="Ярлик на мотузці з логотипом"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="underimg">
-                    <h3 class="potfolio-title">Проєкт LAB</h3>
-                    <p class="potfolio-desc">Маркетинг</p></div
-                  >
-                </a></li
-              ><li class="potfolio-list-item"
-                ><a class="portfolio-link link" href=""
-                  ><img
-                    class="portfolio-img"
-                    src="./images/images-portfolio/imgimg2.9.jpg"
-                    alt="Ноутбук на робочому столі"
-                    width="370"
-                    height="294"
-                  />
-                  <div class="underimg">
-                    <h3 class="potfolio-title">Growing Business</h3>
-                    <p class="potfolio-desc">Додаток</p></div
-                  >
-                </a></li
-              ></ul
+          <h2 class="visually-hidden">Список фильтрів</h2>
+          <ul class="filter-list list">
+            <li class="filter-list-item"
+              ><button class="button secondary first-btn" type="button">Усі</button></li
             >
-          </section></div
-        ></section
+            <li class="filter-list-item"
+              ><button class="button secondary" type="button">Веб-сайти</button></li
+            >
+            <li class="filter-list-item"
+              ><button class="button secondary" type="button">Додатки</button></li
+            >
+            <li class="filter-list-item"
+              ><button class="button secondary" type="button">Дизайн</button></li
+            >
+            <li class="filter-list-item"
+              ><button class="button secondary" type="button">Маркетинг</button></li
+            >
+          </ul>
+          <!-- Portfolio -->
+          <ul class="potfolio-list list">
+            <li class="potfolio-list-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  class="portfolio-img"
+                  src="./images/images-portfolio/img2.1.jpg"
+                  alt="Сторінка сайту на ноутбуці"
+                  width="370"
+                  height="294"
+                />
+                <div class="underimg">
+                  <h3 class="potfolio-title">Технокряк</h3>
+                  <p class="potfolio-desc">Веб-сайт</p></div
+                >
+              </a></li
+            ><li class="potfolio-list-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  class="portfolio-img"
+                  src="./images/images-portfolio/imgimg2.2.jpg"
+                  alt="Два гравця тягнуться до м'яча"
+                  width="370"
+                  height="294"
+                />
+                <div class="underimg">
+                  <h3 class="potfolio-title">Постер New Orlean vs Golden Star</h3>
+                  <p class="potfolio-desc">Дизайн</p></div
+                >
+              </a></li
+            ><li class="potfolio-list-item"
+              ><a class="portfolio-link link" href=""
+                ><img
+                  class="portfolio-img"
+                  src="./images/images-portfolio/imgimg2.3.jpg"
+                  alt="Логотип ресторану"
+                  width="370"
+                  height="294"
+                />
+                <div class="underimg">
+                  <h3 class="potfolio-title">Ресторан Seafood</h3>
+                  <p class="potfolio-desc">Додаток</p></div
+                >
+              </a></li
+            ><li class="potfolio-list-item">
+              <a class="portfolio-link link" href=""
+                ><img
+                  class="portfolio-img"
+                  src="./images/images-portfolio/imgimg2.4.jpg"
+                  alt="Навушники"
+                  width="370"
+                  height="294"
+                />
+                <div class="underimg">
+                  <h3 class="potfolio-title">Проєкт Prime</h3>
+                  <p class="potfolio-desc">Маркетинг</p></div
+                >
+              </a></li
+            ><li class="potfolio-list-item"
+              ><a class="portfolio-link link" href=""
+                ><img
+                  class="portfolio-img"
+                  src="./images/images-portfolio/imgimg2.5.jpg"
+                  alt="Дві коробки"
+                  width="370"
+                  height="294"
+                />
+                <div class="underimg">
+                  <h3 class="potfolio-title">Проєкт Boxes</h3>
+                  <p class="potfolio-desc">Додаток</p></div
+                >
+              </a></li
+            ><li class="potfolio-list-item"
+              ><a class="portfolio-link link" href=""
+                ><img
+                  class="portfolio-img"
+                  src="./images/images-portfolio/imgimg2.6.jpg"
+                  alt="Монітор компьютера"
+                  width="370"
+                  height="294"
+                />
+                <div class="underimg">
+                  <h3 class="potfolio-title">Inspiration has no Borders</h3>
+                  <p class="potfolio-desc">Веб-сайт</p></div
+                >
+              </a></li
+            ><li class="potfolio-list-item"
+              ><a class="portfolio-link link" href=""
+                ><img
+                  class="portfolio-img"
+                  src="./images/images-portfolio/imgimg2.7.jpg"
+                  alt="Відкрита книга"
+                  width="370"
+                  height="294"
+                />
+                <div class="underimg">
+                  <h3 class="potfolio-title">Видання Limited Edition</h3>
+                  <p class="potfolio-desc">Дизайн</p></div
+                >
+              </a></li
+            ><li class="potfolio-list-item"
+              ><a class="portfolio-link link" href=""
+                ><img
+                  class="portfolio-img"
+                  src="./images/images-portfolio/imgimg2.8.jpg"
+                  alt="Ярлик на мотузці з логотипом"
+                  width="370"
+                  height="294"
+                />
+                <div class="underimg">
+                  <h3 class="potfolio-title">Проєкт LAB</h3>
+                  <p class="potfolio-desc">Маркетинг</p></div
+                >
+              </a></li
+            ><li class="potfolio-list-item"
+              ><a class="portfolio-link link" href=""
+                ><img
+                  class="portfolio-img"
+                  src="./images/images-portfolio/imgimg2.9.jpg"
+                  alt="Ноутбук на робочому столі"
+                  width="370"
+                  height="294"
+                />
+                <div class="underimg">
+                  <h3 class="potfolio-title">Growing Business</h3>
+                  <p class="potfolio-desc">Додаток</p></div
+                >
+              </a></li
+            ></ul
+          >
+        </div></section
       >
     </main>
     <!--Підвал-->
     <footer
       ><div class="container">
-        <a class="logo logo-bottom link" href="./index.html"
+        <a class="logo-bottom link" href="./index.html"
           >Web<span class="footer-logo-color">Studio</span></a
         >
         <address class="contact-adress" id="contacts">
